--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -117,13 +117,13 @@
 <!--                    <li class="nav-item" ng-show="!isUserLoggedIn()">-->
 <!--                        <form class="align-middle" ng-submit="tryToAuth()">-->
                             <div class="input-group input-group-sm" style="padding: 4px;">
-                                <input required id="navPhone" class="form-control" ng-model="orderPhone" placeholder="ваш телефон" type="text"
-                                       aria-describedby="inputGroup-sizing-sm" style="margin-left: 10px;">
+                                <input required  class="form-control" ng-model="orderPhone" placeholder="ваш телефон" type="text"
+                                        style="margin-left: 10px;">
 
-                                <input required id="navAddress" class="form-control" ng-model="orderAddress" placeholder="ваш адрес" type="text"
-                                       aria-describedby="inputGroup-sizing-sm" style="margin-left: 10px;">
+                                <input required  class="form-control" ng-model="orderAddress" placeholder="ваш адрес" type="text"
+                                        style="margin-left: 10px;">
 
-                                <button type="submit" id="navCreateOrder" class="btn btn-outline-warning btn-sm"
+                                <button type="submit"  class="btn btn-outline-warning btn-sm"
                                         style="margin-left: 10px;" type="submit">Оформить заказ
                                 </button>
                             </div>
