--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,6 +30,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#!/cart">Корзина</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#!/myOrders">Мои заказы</a>
+                </li>
 
                 <li class="nav-item" ng-show="!isUserLoggedIn()">
                     <form class="align-middle" ng-submit="tryToAuth()">
