--- a/src/main/resources/static/store/store.html
+++ b/src/main/resources/static/store/store.html
@@ -10,6 +10,10 @@
                     <input type="text" class="form-control" id="filterTitle" placeholder="" ng-model="filter.title_part">
                     <label for="filterTitle">Название продукта</label>
                 </div>
+                <div class="form-floating input-group-sm">
+                    <input type="text" class="form-control" id="filterCategory" placeholder="" ng-model="filter.category_part">
+                    <label for="filterCategory">Категория продукта</label>
+                </div>
                 <p></p>
                 <div class="form-floating input-group-sm">
                     <input type="number" class="form-control" id="filterMinPrice" placeholder="" ng-model="filter.min_price">
@@ -29,6 +33,7 @@
                 <tr>
                     <td>ID</td>
                     <td>Название</td>
+                    <td>Категория</td>
                     <td>Цена</td>
                     <td></td>
                 </tr>
@@ -36,6 +41,7 @@
                 <tr ng-repeat="p in ProductsPage.content">
                     <td>{{p.id}}</td>
                     <td>{{p.title}}</td>
+                    <td>{{p.category}}</td>
                     <td>{{p.price}}</td>
                     <td>
                         <button class="btn btn-primary" ng-click="addToCart(p.id)">Добавить в корзину</button>
