--- a/src/main/resources/static/cart/cart.html
+++ b/src/main/resources/static/cart/cart.html
@@ -10,6 +10,7 @@
         <tbody>
         <tr ng-repeat="item in cart.items">
             <td>{{item.productTitle}}</td>
+            <td>{{item.productCategory}}</td>
             <td>{{item.quantity}}</td>
             <td>{{item.pricePerProduct + ' x ' + item.quantity + ' = ' + item.price}}</td>
         </tr>
