--- a/front-service/src/main/resources/static/welcome/welcome.html
+++ b/front-service/src/main/resources/static/welcome/welcome.html
@@ -14,7 +14,7 @@
                     <td></td>
                 </tr>
                 <tbody>
-                <tr ng-repeat="p in ProductsPage.content">
+                <tr ng-repeat="p in ProductsPageMaxBuyed.content">
                     <td>{{p.id}}</td>
                     <td>{{p.title}}</td>
                     <td>{{p.price}}</td>
@@ -35,7 +35,7 @@
                     <td></td>
                 </tr>
                 <tbody>
-                <tr ng-repeat="p in ProductsPage.content">
+                <tr ng-repeat="p in ProductsPageMaxHitCart.content">
                     <td>{{p.id}}</td>
                     <td>{{p.title}}</td>
                     <td>{{p.price}}</td>
