--- a/front-service/src/main/resources/static/store/store.html
+++ b/front-service/src/main/resources/static/store/store.html
@@ -22,6 +22,8 @@
                 </div>
                 <p></p>
                 <button class="btn btn-outline-warning btn-sm" style="width: 100%;" type="submit">Применить</button>
+                <p></p>
+                <button class="btn btn-outline-warning btn-sm" style="width: 100%;" ng-click="clearSelect">Очистить выборку</button>
             </form>
         </div>
         <div class="col-sm-6 col-md-10">
