--- a/front-service/src/main/resources/static/cart/cart.html
+++ b/front-service/src/main/resources/static/cart/cart.html
@@ -27,12 +27,14 @@
     <p></p>
     <h3>Детали заказа</h3>
     <form novalidate>
-        <input class="form-control" type="text" placeholder="Номер телефона получателя" ng-model="orderDetails.phone">
+        <label>Номер телефона получателя в формате <i>+7(xxx) xxx-xxxx</i></label>
+        <input class="form-control" required pattern="\+7\(\d{3}\) \d{3}-\d{4}" type="text" placeholder="Номер телефона получателя" ng-model="orderDetails.phone">
         <p></p>
-        <input class="form-control" type="text" placeholder="Адрес доставки" ng-model="orderDetails.address">
+        <label>Адрес доставки в формате: <i>индекс, страна, штат, город, улица, номер дома, этаж, номер квартиры</i></label>
+        <input class="form-control" required pattern="\d{6}, \w+, \w+, \w+, \w+, \d+, \d+, \d+" type="text" placeholder="Адрес доставки" ng-model="orderDetails.address">
         <p></p>
     </form>
 
-    <button class="btn btn-primary" ng-click="checkOut()" ng-show="isUserLoggedIn() && cart.items.length > 0">Оформить заказ</button>
-    <button class="btn btn-secondary" ng-click="disabledCheckOut()" ng-show="!isUserLoggedIn() && cart.items.length > 0">Оформить заказ</button>
+    <button class="btn btn-primary" ng-click="checkOut()" ng-show="isUserLoggedIn()">Оформить заказ</button>
+    <button class="btn btn-secondary" ng-click="disabledCheckOut()" ng-show="!isUserLoggedIn()">Оформить заказ</button>
 </div>
